数据结构 哈希表

--- a/docs/数据结构.md
+++ b/docs/数据结构.md
@@ -1078,19 +1078,213 @@ return false;   // change return value to fit specific problem
 
   **拉链法**：把具有相同哈希值的键放在同一个单链表中，称为同义词链表。（Java 的 HashMap 就是使用这种方法）。
 
+哈希集合一般判断是否存在重复的值。
 
+- [两个数组的交集](https://leetcode-cn.com/problems/intersection-of-two-arrays/)：给定两个数组，编写一个函数来计算它们的交集。
 
+  ```java
+  /**
+   * 使用两个 Set 去重
+   * 时间复杂度：O(m+n)，其中 n 和 m 是数组的长度。
+   * 将 nums1 转换为集合需要 O(n) 的时间，类似地，将 nums2 转换为集合需要 O(m) 的时间。
+   * 而在平均情况下，集合的 in/contains 操作只需要 O(1) 的时间。
+   * 空间复杂度：O(m+n)，最坏的情况是数组中的所有元素都不同。
+   */
+  public int[] intersection(int[] nums1, int[] nums2) {
+      Set<Integer> set = new HashSet<>();
+      Set<Integer> res = new HashSet<>();
+      for (int num : nums1) {
+          set.add(num);
+      }
+      for (int num : nums2) {
+          if (set.contains(num)) {
+              res.add(num);
+          }
+      }
+      int[] ints = new int[res.size()];
+      int i = 0;
+      for (Integer integer : res) {
+          ints[i++] = integer;
+      }
+      return ints;
+  }
+  ```
 
+- [快乐数](https://leetcode-cn.com/problems/happy-number/)：编写一个算法来判断一个数 `n` 是不是快乐数。
 
-
+  ```java
+  /**
+   * 解法一：用 HashSet 检测循环 非递归求解
+   * 时间复杂度：O(logn)
+   * 空间复杂度：O(logn)
+   */
+  public boolean isHappy2(int n) {
+      Set<Integer> seen = new HashSet<>();
+      while (n != 1 && !seen.contains(n)) {
+          seen.add(n);
+          n = nextSum(n);
+      }
+      return n == 1;
+  }
+  
+  /**
+   * 解法二：快慢指针法
+   * 不快乐的数一定会形成死循环 快慢指针可以检测是否存在循环
+   * 时间复杂度：O(logn)
+   * 空间复杂度：O(1)
+   */
+  public boolean isHappy3(int n) {
+      int slow = n;
+      int fast = nextSum(n);
+      while (fast != 1 && fast != slow) {
+          slow = nextSum(slow);
+          fast = nextSum(nextSum(fast));
+      }
+      return fast == 1;
+  }
+  
+  private int nextSum(int n) {
+      int sum = 0;
+      while (n > 0) {
+          int d = n % 10;
+          sum += d * d;
+          n /= 10;
+      }
+      return sum;
+  }
+  ```
 
 #### 哈希映射
 
+- [同构字符串](https://leetcode-cn.com/problems/isomorphic-strings/)
 
+  ```java
+  /**
+   * 使用 HashMap 建立映射
+   */
+  public boolean isIsomorphic(String s, String t) {
+      //关于 s -> t 的映射
+      HashMap<Character, Character> map = new HashMap<>();
+      for (int i = 0; i < s.length(); i++) {
+          char sc = s.charAt(i);
+          char tc = t.charAt(i);
+          //保证 s 中当前元素未建立映射
+          if (map.get(sc) == null) {
+              //保证 t 中当前元素未建立映射
+              if (map.containsValue(tc)) {
+                  return false;
+              }
+              //建立 s 中当前元素与 t 中当前元素一一映射关系
+              map.put(sc, tc);
+          } else if (map.get(sc) != tc) {
+              return false;
+          }
+      }
+      return true;
+  }
+  ```
+
+- [两个列表的最小索引总和](https://leetcode-cn.com/problems/minimum-index-sum-of-two-lists/)
+
+  ```java
+  /**
+   * 解法一：使用 HashMap 记录餐厅和索引
+   */
+  public String[] findRestaurant(String[] list1, String[] list2) {
+      //保证使用最小的空间
+      if (list1.length > list2.length) {
+          return findRestaurant(list2, list1);
+      }
+      //避免重复计算
+      int m = list1.length;
+      int n = list2.length;
+      // 定义 HashMap 时指定初始容量 避免 rehash
+      Map<String, Integer> map = new HashMap<>((int)(list1.length/0.75));
+      for (int i = 0; i < m; i++) {
+          map.put(list1[i], i);
+      }
+      int min = Integer.MAX_VALUE;
+      // 定义时指定列表的大小 避免频繁的扩容
+      List<String> list = new ArrayList<>(map.size());
+      for (int j = 0; j < n; j++) {
+          Integer i;//提前定义变量，减少操作
+          if ((i = map.get(list2[j])) != null) {
+              if (i + j < min) {
+                  list.clear();
+                  min = i + j;
+                  list.add(list2[j]);
+              } else if (i + j == min) {
+                  list.add(list2[j]);
+              }
+          }
+      }
+      return list.toArray(new String[0]);
+  }
+  ```
 
 #### 设计键
 
+通常键的选择相对简单，有时你必须考虑在使用哈希表时**设计合适的键**。
 
+- [字母异位词分组](https://leetcode-cn.com/problems/group-anagrams/)：给定一个字符串数组，将字母异位词组合在一起。字母异位词指字母相同，但排列不同的字符串。
+
+  ```java
+  /**
+   * 解法一：将字符串按字符排序 返回值作为 HashMap 的键
+   */
+  public List<List<String>> groupAnagrams(String[] strs) {
+      Map<String, List<String>> map = new HashMap<>();
+      for (String str : strs) {
+          //对字符串按字符进行排序 返回值做键
+          String key = sortStr(str);
+          List<String> list;
+          if ((list = map.get(key)) == null) {
+              list = new ArrayList<>();
+              map.put(key, list);
+          }
+          //不需要重新 put 已经存在的 list （引用传递）
+          list.add(str);
+      }
+      return new ArrayList<>(map.values());
+  }
+  
+  private String sortStr(String str) {
+      char[] chars = str.toCharArray();
+      Arrays.sort(chars);
+      return new String(chars);
+  }
+  
+  /**
+   * 小写字母 ACSII 码 - 97 以后和质数的对应规则
+   */
+  private int[] primes = {
+          2, 3, 5, 7, 11, 13, 17, 19, 23, 29,
+          31, 37, 41, 43, 47, 53, 59, 61, 67,
+          71, 73, 79, 83, 89, 97, 101};
+  /**
+   * 解法二：自定义字符串的哈希规则，使用质数作为乘法因子
+   */
+  public List<List<String>> groupAnagrams2(String[] strs) {
+      Map<Integer, List<String>> map = new HashMap<>();
+      // key 是字符串自定义规则下的哈希值
+      for (String str : strs) {
+          int hashValue = 1;
+          char[] charArray = str.toCharArray();
+          for (char c : charArray) {
+              hashValue *= primes[c - 'a'];
+          }
+          //提前定义变量可以减少操作
+          List<String> list;
+          if ((list = map.get(hashValue)) == null) {
+              list = new ArrayList<>();
+              map.put(hashValue, list);
+          }
+          //不需要重新 put 已经存在的 list （引用传递）
+          list.add(str);
+      }
+      return new ArrayList<>(map.values());
+  }
+  ```
 
 
 
