--- a/docs/数据结构.md
+++ b/docs/数据结构.md
@@ -1078,7 +1078,8 @@ return false;   // change return value to fit specific problem
 
   **拉链法**：把具有相同哈希值的键放在同一个单链表中，称为同义词链表。（Java 的 HashMap 就是使用这种方法）。
 
-哈希集合一般判断是否存在重复的值。
+#### 哈希集合
+一般判断是否存在重复的值。
 
 - [两个数组的交集](https://leetcode-cn.com/problems/intersection-of-two-arrays/)：给定两个数组，编写一个函数来计算它们的交集。
 
@@ -1286,7 +1287,41 @@ return false;   // change return value to fit specific problem
   }
   ```
 
+- [寻找重复的子树](https://leetcode-cn.com/problems/find-duplicate-subtrees/)：给定一棵二叉树，返回所有重复的子树。对于同一类的重复子树，你只需要返回其中任意**一棵**的根结点即可。
 
+  ```java
+  /**
+   * 前序遍历 在递归的最里层开始将出现的节点加入 HashMap 中
+   */
+  public static List<TreeNode> findDuplicateSubtrees(TreeNode root) {
+      Map<String, Integer> map = new HashMap<>();
+      List<TreeNode> list = new ArrayList<>();
+  
+      findDuplicateSubtrees(root, map, list);
+      return list;
+  }
+  
+  private static String findDuplicateSubtrees(TreeNode root, Map<String, Integer> map, List<TreeNode> list) {
+      StringBuilder sb = new StringBuilder();
+      sb.append("#");
+      if (root == null)
+          return sb.toString();
+  
+      sb.append(root.val)
+              .append(findDuplicateSubtrees(root.left, map, list))
+              .append(findDuplicateSubtrees(root.right, map, list));
+  
+      String key = sb.toString();
+      Integer val = map.get(key);
+      //对已经出现一次的加入返回列表中
+      if ( val != null && val == 1) {
+          list.add(root);
+      }
+      //对出现的次数累加
+      map.merge(key, 1, (a, b) -> a + b);
+      return key;
+  }
+  ```
 
 ### 树
 
