add 数据结构 - 二叉树

--- a/docs/数据结构.md
+++ b/docs/数据结构.md
@@ -1325,13 +1325,65 @@ return false;   // change return value to fit specific problem
 
 ### 树
 
+树由 n（n>=0）个有限结点组成一个具有层次关系的数据结构。**从图的观点来看，树也可视为一个拥有 n 个节点和 n-1 条边的一个有向无环图**。把它叫做“树”是因为它看起来像一棵倒挂的树，也就是说它是根朝上，而叶朝下的。它具有以下的特点：
 
+- 每个结点有零个或多个子结点；
+- 没有父结点的结点称为根结点；
+- 每一个非根结点有且只有一个父结点；
+- 除了根结点外，每个子结点可以分为多个不相交的子树；
+
+树的术语：
+
+- 结点：包含一个数据元素及若干指向子树分支的信息。
+- 结点的度：一个结点拥有子树的数目称为结点的度。
+- 叶子结点：也称为终端结点，没有子树的结点或者度为零的结点。
+- 分支结点：也称为非终端结点，度不为零的结点称为非终端结点。
+- 树的度：树中所有结点的度的最大值。
+- 结点的层次：从根结点开始，假设根结点为第 1 层，根结点的孩子结点为第 2 层，依此类推，如果某一个结点位于第 L 层，则其孩子结点位于第 L+1 层。
+- 树的深度：也称为树的高度，树中所有结点的层次最大值称为树的深度。
+- 有序树：如果树中各棵子树的次序是有先后次序，则称该树为有序树。
+- 无序树：如果树中各棵子树的次序没有先后次序，则称该树为无序树。
+- 森林：由 m（m≥0）棵互不相交的树构成一片森林。如果把一棵非空的树的根结点删除，则该树就变成了一片森林，森林中的树由原来根结点的各棵子树构成 。
 
 #### 二叉树
 
+每个结点至多拥有两棵子树（即二叉树中不存在度大于 2 的结点)，并且，二叉树的子树有左右之分，其次序不能任意颠倒。二叉树的性质：
 
+- 若二叉树的层次从 1 开始，则在二叉树的第 i 层至多有 2^i-1^ 个结点（i>=1）；
+- 深度为 k 的二叉树最多有 2^k^ - 1 个结点 (k>=1) (空树的深度不存在)；
+- 对任何一棵二叉树，如果其叶子结点（度为 0）数为`m`, 度为 2 的结点数为 n , 则 m = n + 1；
 
-#### 完全二叉树
+**满二叉树**：如果一棵二叉树只有度为 0 的结点和度为 2 的结点，并且度为 0 的结点在同一层上，则这棵二叉树为满二叉树。深度为 k 的满二叉树有 2^k^ -1 个结点 (k>=1)（空树的深度不存在）。
+
+**完全二叉树**：一棵深度为 k 的有 n 个结点的二叉树，对树中的结点按从上至下、从左到右的顺序进行编号，如果编号为 i（1≤i≤n）的结点与满二叉树中编号为 i 的结点在二叉树中的位置相同，则这棵二叉树称为完全二叉树。
+
+#### 二叉树的遍历 ####
+
+遍历是对树的一种最基本的运算，所谓遍历二叉树，就是按一定的规则和顺序走遍二叉树的所有结点，使每一个结点都被访问一次，而且只被访问一次。由于二叉树是非线性结构，因此，树的遍历实质上是将二叉树的各个结点转换成为一个线性序列来表示。
+
+以这棵二叉树为例子讲述遍历过程：
+
+<img src="../assets/data-structure/binary-tree-demo.png" alt="binary-tree-demo" style="zoom:80%;" />
+
+- 前序遍历：首先访问根节点，然后遍历左子树，最后遍历右子树。
+
+  遍历结果：1->2->4->5->3->6->7
+
+- 中序遍历：先遍历左子树，然后访问根节点，然后遍历右子树。
+
+  遍历结果：4->2->5->1->6->3->7
+
+  对于二叉搜索树，中序遍历将得到一个递增的有序序列。
+
+- 后序遍历：先遍历左子树，然后遍历右子树，最后访问树的根节点。
+
+  遍历结果：4->5->2->6->7->3->1
+
+- 层次遍历：逐层遍历树结构。从一个根节点开始，首先访问节点本身。 然后遍历它的相邻节点，其次遍历它的二级邻节点、三级邻节点，以此类推。
+
+  使用**队列和广度优先搜索**可以很方便实现此算法。
+
+  遍历结果：1->2->3->4->5->6->7
 
 
 
