--- a/docs/数据结构.md
+++ b/docs/数据结构.md
@@ -1466,9 +1466,152 @@ return false;   // change return value to fit specific problem
 
   对于二叉搜索树，中序遍历将得到一个递增的有序序列。
 
+  ```java
+  /**
+   * 使用 栈 迭代实现中序遍历
+   */
+  public static List<Integer> inorderTraversal2(TreeNode root) {
+      List<Integer> list = new LinkedList<>();
+      //存储节点的栈
+      Deque<TreeNode> stack = new LinkedList<>();
+      TreeNode cur = root;
+      while (cur != null || !stack.isEmpty()) {
+          while (cur != null) {
+              stack.push(cur);
+              cur = cur.left;
+          }
+          cur = stack.pop();
+          list.add(cur.val);
+          cur = cur.right;
+      }
+      return list;
+  }
+  
+  /**
+   * 莫里斯 Morris 算法实现中序遍历
+   * 时间复杂度： O(N)。
+   * 空间复杂度： O(1)。
+   */
+  public static List<Integer> inorderTraversal3(TreeNode root) {
+      // 因为不需要查询，使用 LinkedList 更佳
+      List<Integer> list = new LinkedList<>();
+      TreeNode cur = root;
+      while (cur != null) {
+          if (cur.left == null) {
+              // 获取根节点的值
+              list.add(cur.val);
+              cur = cur.right;
+          } else {
+              // 查找前驱结点
+              TreeNode pred = cur.left;
+              while (pred.right != null && pred.right != cur) {
+                  pred = pred.right;
+              }
+              // 第一次到达左子树的最右端 将前驱结点的右节点赋值为当前结点
+              if (pred.right == null) {
+                  pred.right = cur;
+                  cur = cur.left;
+              } else {
+                  // 第二次到达左子树的最右端 还原树结构
+                  list.add(cur.val);
+                  pred.right = null;
+                  cur = cur.right;
+              }
+          }
+      }
+      return list;
+  }
+  ```
+
 - 后序遍历：先遍历左子树，然后遍历右子树，最后访问树的根节点。
 
   遍历结果：4->5->2->6->7->3->1
+
+  ```java
+  /**
+   * 使用 栈 迭代实现后序遍历
+   */
+  public static List<Integer> postorderTraversal4(TreeNode root) {
+      List<Integer> list = new LinkedList<>();
+      Deque<TreeNode> stack = new LinkedList<>();
+  
+      TreeNode cur = root;
+      TreeNode p = null;//用来记录上一节点
+      while (!stack.isEmpty() || cur != null) {
+          while (cur != null) {
+              stack.push(cur);
+              cur = cur.left;
+          }
+          cur = stack.getFirst();
+          if (cur.right == null || cur.right == p) {
+              list.add(cur.val);
+              stack.pop();
+              p = cur;
+              cur = null;
+          } else {
+              cur = cur.right;
+          }
+      }
+      return list;
+  }
+  
+  /**
+   * 莫里斯  Morris 算法实现后序遍历
+   * 时间复杂度： O(N)。
+   * 空间复杂度： O(1)。
+   */
+  public static List<Integer> postorderTraversal3(TreeNode root) {
+      // 因为不需要查询，使用 LinkedList 更佳
+      List<Integer> list = new LinkedList<>();
+      TreeNode cur = root;
+      while (cur != null) {
+          if (cur.left == null) {
+              cur = cur.right;
+          } else {
+              // 查找前驱结点
+              TreeNode pred = cur.left;
+              while (pred.right != null && pred.right != cur) {
+                  pred = pred.right;
+              }
+              // 第一次到达左子树的最右端 将前驱结点的右节点赋值为当前结点
+              if (pred.right == null) {
+                  pred.right = cur;
+                  cur = cur.left;
+              } else {
+                  // 第二次到达左子树的最右端 还原树结构
+                  pred.right = null;
+                  addNode(cur.left, list);
+                  cur = cur.right;
+              }
+          }
+      }
+      addNode(root,list);
+      return list;
+  }
+  
+  private static void addNode(TreeNode node, List<Integer> list) {
+      TreeNode tail = reverseNode(node);
+      TreeNode cur = tail;
+      while (cur != null) {
+          list.add(cur.val);
+          cur = cur.right;
+      }
+      reverseNode(tail);
+  }
+  
+  // 反转链表
+  private static TreeNode reverseNode(TreeNode node) {
+      TreeNode pre = null;
+      TreeNode next;
+      while (node != null) {
+          next = node.right;
+          node.right = pre;
+          pre = node;
+          node = next;
+      }
+      return pre;
+  }
+  ```
 
 - 层次遍历：逐层遍历树结构。从一个根节点开始，首先访问节点本身。 然后遍历它的相邻节点，其次遍历它的二级邻节点、三级邻节点，以此类推。
 
