更新 二叉树

--- a/docs/数据结构.md
+++ b/docs/数据结构.md
@@ -1357,6 +1357,125 @@ return false;   // change return value to fit specific problem
 
 **完全二叉树**：一棵深度为 k 的有 n 个结点的二叉树，对树中的结点按从上至下、从左到右的顺序进行编号，如果编号为 i（1≤i≤n）的结点与满二叉树中编号为 i 的结点在二叉树中的位置相同，则这棵二叉树称为完全二叉树。
 
+运用递归解决树的问题：
+
+- [二叉树的最大深度](https://leetcode-cn.com/problems/maximum-depth-of-binary-tree/)：二叉树的深度为根节点到最远叶子节点的最长路径上的节点数。
+
+  ```java
+  /**
+   * 解法一：自底向上 递归
+   */
+  public static int maxDepth(TreeNode root) {
+      if (root == null) return 0;
+      int i = maxDepth(root.left);
+      int j = maxDepth(root.right);
+      return Math.max(i, j) + 1;
+  }
+  
+  /**
+   * 解法二：自顶向下 递归
+   */
+  private static int maxDepth = 0;
+  public static int maxDepth2(TreeNode root) {
+      if (root == null) return 0;
+      maxDepth2(root,maxDepth+1);
+      return maxDepth;
+  }
+  
+  private static void maxDepth2(TreeNode root, int depth) {
+      if (root == null) return;
+      if (root.left == null && root.right == null) {
+          maxDepth = Math.max(maxDepth, depth);
+      }
+      maxDepth2(root.left, depth + 1);
+      maxDepth2(root.right, depth + 1);
+  }
+  ```
+
+- [对称二叉树](https://leetcode-cn.com/problems/symmetric-tree/)：给定一个二叉树，检查它是否是镜像对称的。
+
+  ```java
+  /**
+   * 解法一：递归
+   */
+  public static boolean isSymmetric(TreeNode root) {
+      if (root == null) return true;
+      return isSymmetric(root.left,root.right);
+  }
+  
+  private static boolean isSymmetric(TreeNode left, TreeNode right) {
+      if (left == null && right == null) {
+          return true;
+      }
+      // 此时左右子树都不能为空
+      if (left == null || right == null || left.val != right.val) {
+          return false;
+      }
+      return isSymmetric(left.left,right.right) && isSymmetric(left.right,right.left);
+  }
+  
+  /**
+   * 解法二使用 队列 迭代
+   */
+  public static boolean isSymmetric2(TreeNode root) {
+      if(root==null || (root.left==null && root.right==null)) {
+          return true;
+      }
+      //用队列保存节点
+      LinkedList<TreeNode> queue = new LinkedList<>();
+      //将根节点的左右孩子放到队列中
+      queue.add(root.left);
+      queue.add(root.right);
+      while(queue.size()>0) {
+          //从队列中取出两个节点，再比较这两个节点
+          TreeNode left = queue.removeFirst();
+          TreeNode right = queue.removeFirst();
+          //如果两个节点都为空就继续循环，两者有一个为空就返回false
+          if(left==null && right==null) {
+              continue;
+          }
+          // 此时左右子树都不能为空
+          if(left==null || right==null) {
+              return false;
+          }
+          if(left.val!=right.val) {
+              return false;
+          }
+          //将左节点的左孩子， 右节点的右孩子放入队列
+          queue.add(left.left);
+          queue.add(right.right);
+          //将左节点的右孩子，右节点的左孩子放入队列
+          queue.add(left.right);
+          queue.add(right.left);
+      }
+      return true;
+  }
+  ```
+
+- [路径总和](https://leetcode-cn.com/problems/path-sum/)：给定一个二叉树和一个目标和，判断该树中是否存在根节点到叶子节点的路径，这条路径上所有节点值相加等于目标和。
+
+  ```java
+  /**
+   * 解法一：递归
+   */
+  public static boolean hasPathSum(TreeNode root, int sum) {
+      if (root == null) {
+          return false;
+      }
+      if (root.left == null && root.right == null) {
+          return sum == root.val;
+      }
+      // 有结果了快速返回 加快速度
+      boolean b = hasPathSum(root.left, sum - root.val);
+      if (b) {
+          return true;
+      }
+      return hasPathSum(root.right, sum - root.val);
+  }
+  ```
+
+
+
 #### 二叉树的遍历 ####
 
 遍历是对树的一种最基本的运算，所谓遍历二叉树，就是按一定的规则和顺序走遍二叉树的所有结点，使每一个结点都被访问一次，而且只被访问一次。由于二叉树是非线性结构，因此，树的遍历实质上是将二叉树的各个结点转换成为一个线性序列来表示。
@@ -1365,7 +1484,7 @@ return false;   // change return value to fit specific problem
 
 <img src="../assets/data-structure/binary-tree-demo.png" alt="binary-tree-demo" style="zoom:80%;" />
 
-- 前序遍历：首先访问根节点，然后遍历左子树，最后遍历右子树。
+- [前序遍历](https://leetcode-cn.com/problems/binary-tree-preorder-traversal/)：首先访问根节点，然后遍历左子树，最后遍历右子树。
 
   遍历结果：1->2->4->5->3->6->7
 
@@ -1460,7 +1579,7 @@ return false;   // change return value to fit specific problem
   }
   ```
 
-- 中序遍历：先遍历左子树，然后访问根节点，然后遍历右子树。
+- [中序遍历](https://leetcode-cn.com/problems/binary-tree-inorder-traversal/)：先遍历左子树，然后访问根节点，然后遍历右子树。
 
   遍历结果：4->2->5->1->6->3->7
 
@@ -1523,33 +1642,31 @@ return false;   // change return value to fit specific problem
   }
   ```
 
-- 后序遍历：先遍历左子树，然后遍历右子树，最后访问树的根节点。
+- [后序遍历](https://leetcode-cn.com/problems/binary-tree-postorder-traversal/)：先遍历左子树，然后遍历右子树，最后访问树的根节点。
 
   遍历结果：4->5->2->6->7->3->1
 
   ```java
   /**
-   * 使用 栈 迭代实现后序遍历
+   * 解法二：使用 栈 迭代实现后序遍历
+   * 时间复杂度：访问每个节点恰好一次，时间复杂度为 O(N) 
+   * 空间复杂度： O(N)。
    */
-  public static List<Integer> postorderTraversal4(TreeNode root) {
-      List<Integer> list = new LinkedList<>();
+  public static List<Integer> postorderTraversal2(TreeNode root) {
+      LinkedList<Integer> list = new LinkedList<>();
+      if (root == null) {
+          return list;
+      }
       Deque<TreeNode> stack = new LinkedList<>();
-  
-      TreeNode cur = root;
-      TreeNode p = null;//用来记录上一节点
-      while (!stack.isEmpty() || cur != null) {
-          while (cur != null) {
-              stack.push(cur);
-              cur = cur.left;
+      stack.push(root);
+      while (!stack.isEmpty()) {
+          TreeNode node = stack.pop();
+          list.addFirst(node.val);
+          if (node.left != null) {
+              stack.push(node.left);
           }
-          cur = stack.getFirst();
-          if (cur.right == null || cur.right == p) {
-              list.add(cur.val);
-              stack.pop();
-              p = cur;
-              cur = null;
-          } else {
-              cur = cur.right;
+          if (node.right != null) {
+              stack.push(node.right);
           }
       }
       return list;
@@ -1612,8 +1729,8 @@ return false;   // change return value to fit specific problem
       return pre;
   }
   ```
-
-- 层次遍历：逐层遍历树结构。从一个根节点开始，首先访问节点本身。 然后遍历它的相邻节点，其次遍历它的二级邻节点、三级邻节点，以此类推。
+  
+- [层次遍历](https://leetcode-cn.com/problems/binary-tree-level-order-traversal/)：逐层遍历树结构。从一个根节点开始，首先访问节点本身。 然后遍历它的相邻节点，其次遍历它的二级邻节点、三级邻节点，以此类推。
 
   使用**队列和广度优先搜索**可以很方便实现此算法。
 
@@ -1648,8 +1765,6 @@ return false;   // change return value to fit specific problem
       return lists;
   }
   ```
-
-
 
 #### Huffman 树
 
