--- a/docs/数据结构.md
+++ b/docs/数据结构.md
@@ -1766,13 +1766,95 @@ return false;   // change return value to fit specific problem
   }
   ```
 
-#### Huffman 树
-
-
-
 #### 二叉搜索树
 
+**二叉搜索树**（BST）是二叉树的一种特殊表示形式，它满足如下特性：
 
+1. 每个节点中的值必须**大于**（或等于）存储在其左子树中的任何值。
+2. 每个节点中的值必须**小于**（或等于）存储在其右子树中的任何值。
+
+- [验证二叉搜索树](https://leetcode-cn.com/problems/validate-binary-search-tree/)：给定一个二叉树，判断其是否是一个有效的二叉搜索树。
+
+  ```java
+  /**
+   * 中序遍历 直接检查结果
+   */
+  private long pre = Long.MIN_VALUE;
+  public boolean isValidBST(TreeNode root) {
+      if (root == null) {
+          return true;
+      }
+      // 访问左子树
+      if (!isValidBST(root.left)) {
+          return false;
+      }
+      // 访问当前节点：如果当前节点小于等于中序遍历的前一个节点，说明不满足 BST，返回 false；否则继续遍历。
+      if (root.val <= pre) {
+          return false;
+      }
+      pre = root.val;
+      // 访问右子树
+      return isValidBST(root.right);
+  }
+  ```
+
+  
+
+- [二叉搜索树中的搜索](https://leetcode-cn.com/problems/search-in-a-binary-search-tree/)：给定二叉搜索树（BST）的根节点和一个值。 你需要在 BST 中找到节点值等于给定值的节点。 返回以该节点为根的子树。 如果节点不存在，则返回 NULL。
+
+  ```java
+  public TreeNode searchBST(TreeNode root, int val) {
+      if (root == null) return null;
+      if (root.val == val) {
+          return root;
+      } else if (root.val > val) {
+          return searchBST(root.left, val);
+      } else {
+          return searchBST(root.right, val);
+      }
+  }
+  ```
+
+- [二叉搜索树中的插入操作](https://leetcode-cn.com/problems/insert-into-a-binary-search-tree/)：给定二叉搜索树（BST）的根节点和要插入树中的值，将值插入二叉搜索树。 返回插入后二叉搜索树的根节点。
+
+  ```java
+  /**
+   * 解法一：递归
+   */
+  public TreeNode insertIntoBST(TreeNode root, int val) {
+      if (root == null)
+          return new TreeNode(val);
+      if (root.val > val) {
+          root.left = insertIntoBST(root.left, val);
+      } else if (root.val < val) {
+          root.right = insertIntoBST(root.right, val);
+      }
+      return root;
+  }
+  
+  /**
+   * 解法二：迭代
+   */
+  public TreeNode insertIntoBST2(TreeNode root, int val) {
+      if (root == null)
+          return new TreeNode(val);
+      TreeNode parent = root, p = root;
+      while (p != null) {
+          parent = p;
+          p = p.val < val ? p.right : p.left;
+      }
+      if (parent.val < val) {
+          parent.right = new TreeNode(val);
+      } else {
+          parent.left = new TreeNode(val);
+      }
+      return root;
+  }
+  ```
+
+- [删除二叉搜索树中的节点](https://leetcode-cn.com/problems/delete-node-in-a-bst/)：给定一个二叉搜索树的根节点 root 和一个值 key，删除二叉搜索树中的 key 对应的节点，并保证二叉搜索树的性质不变。返回二叉搜索树（有可能被更新）的根节点的引用。
+
+  
 
 #### AVL 树
 
@@ -1793,6 +1875,8 @@ return false;   // change return value to fit specific problem
 #### Trie 树
 
 
+
+#### Huffman 树
 
 
 
