--- a/docs/数据结构.md
+++ b/docs/数据结构.md
@@ -1773,6 +1773,10 @@ return false;   // change return value to fit specific problem
 1. 每个节点中的值必须**大于**（或等于）存储在其左子树中的任何值。
 2. 每个节点中的值必须**小于**（或等于）存储在其右子树中的任何值。
 
+二叉搜索树的有优点是，即便在最坏的情况下，也允许你在`O(h)`（h 为树的高度）的时间复杂度内执行所有的搜索、插入、删除操作。
+
+通常来说，如果你想**有序地存储数据**或者需要**同时执行搜索、插入、删除**等多步操作，二叉搜索树这个数据结构是一个很好的选择。		
+
 - [验证二叉搜索树](https://leetcode-cn.com/problems/validate-binary-search-tree/)：给定一个二叉树，判断其是否是一个有效的二叉搜索树。
 
   ```java
@@ -1854,7 +1858,74 @@ return false;   // change return value to fit specific problem
 
 - [删除二叉搜索树中的节点](https://leetcode-cn.com/problems/delete-node-in-a-bst/)：给定一个二叉搜索树的根节点 root 和一个值 key，删除二叉搜索树中的 key 对应的节点，并保证二叉搜索树的性质不变。返回二叉搜索树（有可能被更新）的根节点的引用。
 
+  ```java
+  /**
+   * 解法一：递归
+   * 1. 如果目标节点没有子节点，我们可以直接移除该目标节点。
+   * 2. 如果目标节只有一个子节点，我们可以用其子节点作为替换。
+   * 3. 如果目标节点有两个子节点，我们需要用其中序 后继节点 或者 前驱节点 来替换，再删除该目标节点。
+   */
+  public TreeNode deleteNode(TreeNode root, int key) {
+      if (root == null) return null;
+      if (key > root.val) {
+          root.right = deleteNode(root.right, key);
+      } else if (key < root.val) {
+          root.left = deleteNode(root.left, key);
+      } else {
+          if (root.left == null && root.right == null) {
+              root = null;
+          } else if (root.right != null) {
+              //使用后继节点替换当前节点再删除后继节点
+              root.val = successor(root);
+              root.right = deleteNode(root.right, root.val);
+          } else {
+              //使用前驱节点替换当前节点再删除前驱节点
+              root.val = predecessor(root);
+              root.left = deleteNode(root.left, root.val);
+          }
+      }
+      return root;
+  }
   
+  private int successor(TreeNode root) {
+      root = root.right;
+      while (root.left != null) {
+          root = root.left;
+      }
+      return root.val;
+  }
+  
+  private int predecessor(TreeNode root) {
+      root = root.left;
+      while (root.right != null) {
+          root = root.right;
+      }
+      return root.val;
+  }
+  ```
+
+- [将有序数组转换为二叉搜索树](https://leetcode-cn.com/problems/convert-sorted-array-to-binary-search-tree/)：将一个按照升序排列的有序数组，转换为一棵高度平衡二叉搜索树。
+
+  ```java
+  /**
+   * 解法一：递归 + 二分法
+   */
+  public TreeNode sortedArrayToBST(int[] nums) {
+      if (nums == null || nums.length == 0) return null;
+      return sortedArrayToBST(nums, 0, nums.length-1);
+  }
+  
+  private TreeNode sortedArrayToBST(int[] nums, int start, int end) {
+      if (start > end) return null;
+      // 使用 (start+end)/2 有溢出的风险
+      int mid = start + (end - start) / 2;
+      int num = nums[mid];
+      TreeNode root = new TreeNode(num);
+      root.left = sortedArrayToBST(nums, start, mid - 1);
+      root.right = sortedArrayToBST(nums, mid + 1, end);
+      return root;
+  }
+  ```
 
 #### AVL 树
 
@@ -1866,7 +1937,212 @@ return false;   // change return value to fit specific problem
 
 #### N 叉树
 
+ 一棵以根节点开始，每个节点不超过`N`个子节点的树，称为 `N` 叉树（N-ary Tree）。
 
+**N 叉树的遍历有前序遍历、后序遍历、层序遍历**，N叉树的中序遍历没有标准定义，中序遍历只有在二叉树中有明确的定义。
+
+用如图所示的三叉树举例：
+
+![nary_tree_example](../assets/data-structure/nary_tree_example.png)
+
+- 前序遍历：先访问根节点，然后逐个遍历以其子节点为根的子树。
+
+  遍历结果：A->B->C->E->F->D->G.
+
+  ```java
+  // N 叉树节点定义
+  private static class Node {
+      private int val;
+      private List<Node> children;
+      public Node() {
+      }
+      public Node(int _val) {
+          val = _val;
+      }
+      public Node(int _val, List<Node> _children) {
+          val = _val;
+          children = _children;
+      }
+  }
+  
+  /**
+   * 解法一：递归
+   */
+  private static List<Integer> list = new ArrayList<>();
+  public static List<Integer> preorder(Node root) {
+      if (root == null) return list;
+  
+      list.add(root.val);
+      if (root.children == null) return list;
+      for (Node node : root.children) {
+          preorder(node);
+      }
+      return list;
+  }
+  
+  /**
+   * 解法二：迭代
+   */
+  public static List<Integer> preorder2(Node root) {
+      List<Integer> list = new LinkedList<>();
+      if (root == null) return list;
+      // 使用栈临时存储子节点
+      Deque<Node> stack = new LinkedList<>();
+      stack.push(root);
+      while (!stack.isEmpty()) {
+          Node node = stack.pop();
+          list.add(node.val);
+          List<Node> children = node.children;
+          if (children != null && !children.isEmpty()) {
+              for (int i = children.size() - 1; i >= 0; i--)
+                  stack.push(children.get(i));
+          }
+      }
+      return list;
+  }
+  ```
+
+- 后序遍历：先逐个遍历以根节点的子节点为根的子树，最后访问根节点。
+
+  遍历结果：B->E->F->C->G->D->A.
+
+  ```java
+  /**
+   * 解法一：递归
+   */
+  private static List<Integer> list = new ArrayList<>();
+  public static List<Integer> postorder(Node root) {
+      if (root == null) return list;
+      List<Node> children = root.children;
+      if (children != null) {
+          for (Node node : root.children) {
+              postorder(node);
+          }
+      }
+      list.add(root.val);
+      return list;
+  }
+  
+  /**
+   * 解法二：迭代
+   */
+  public static List<Integer> postorder2(Node root) {
+      LinkedList<Integer> list = new LinkedList<>();
+      if (root == null) return list;
+      // 使用栈临时存储子节点
+      Deque<Node> stack = new LinkedList<>();
+      stack.push(root);
+      while (!stack.isEmpty()) {
+          Node node = stack.pop();
+          list.addFirst(node.val);
+  
+          List<Node> children = node.children;
+          if (children != null && !children.isEmpty()) {
+              for (int i = 0; i < children.size(); i++)
+                  stack.push(children.get(i));
+          }
+      }
+      return list;
+  }
+  ```
+
+- 层序遍历：在树中进行广度优先搜索，我们将按层序的顺序进行遍历。
+
+  遍历结果：A->B->C->D->E->F->G.
+
+  ```java
+  /**
+   * 解法一：使用 队列 + BFS
+   * 时间复杂度：O(n)。n 指的是节点的数量。
+   * 空间复杂度：O(n)。
+   */
+  public static List<List<Integer>> levelOrder(Node root) {
+      List<List<Integer>> list = new LinkedList<>();
+      if (root == null) return list;
+  
+      Queue<Node> queue = new LinkedList<>();
+      queue.offer(root);
+      while (!queue.isEmpty()) {
+          List<Integer> level = new LinkedList<>();
+          int size = queue.size();
+          for (int i = 0; i < size; i++) {
+              Node node = queue.remove();
+              level.add(node.val);
+              List<Node> children = node.children;
+              if (children != null) {
+                  queue.addAll(children);
+              }
+          }
+          list.add(level);
+      }
+      return list;
+  }
+  
+  /**
+   * 解法二：递归
+   * 时间复杂度：O(n)。
+   * 空间复杂度：正常情况 O(logn)，最坏情况 O(n)。运行时在堆栈上的空间。
+   */
+  private static List<List<Integer>> list = new LinkedList<>();
+  public static List<List<Integer>> levelOrder2(Node root) {
+      if (root == null) return list;
+      levelOrder2(root,0);
+      return list;
+  }
+  
+  private static void levelOrder2(Node root, int level) {
+      if (list.size() <= level) {
+          list.add(new LinkedList<>());
+      }
+      list.get(level).add(root.val);
+      if (root.children != null) {
+          for (Node node : root.children) {
+              levelOrder2(node, level + 1);
+          }
+      }
+  }
+  ```
+
+- [N 叉树的最大深度]()：给定一个 N 叉树，找到其最大深度。最大深度是指从根节点到最远叶子节点的最长路径上的节点总数。
+
+  ```java
+  /**
+   * 解法一：自底向上递归
+   */
+  public int maxDepth(Node root) {
+      if (root == null) return 0;
+      int maxDepth = 0;
+      List<Node> children = root.children;
+      if (children != null) {
+          for (Node node : children) {
+              maxDepth = Math.max(maxDepth, maxDepth(node));
+          }
+      }
+      return maxDepth + 1;
+  }
+  
+  /**
+   * 解法二：自顶向下递归
+   */
+  private int max = 0;
+  
+  public int maxDepth2(Node root) {
+      if (root == null) return 0;
+      maxDepth2(root, 1);
+      return max;
+  }
+  
+  private void maxDepth2(Node root, int depth) {
+      List<Node> children = root.children;
+      if (children == null || children.size() == 0) {
+          max = Math.max(max, depth);
+          return;
+      }
+      for (Node node : children) {
+          maxDepth2(node, depth + 1);
+      }
+  }
+  ```
 
 #### B + 树
 
