--- a/docs/数据结构.md
+++ b/docs/数据结构.md
@@ -2144,11 +2144,17 @@ return false;   // change return value to fit specific problem
   }
   ```
 
+#### Trie 树 ####
+
+**前缀树**，又称**字典树**，是 **N 叉树**的特殊形式。前缀树是用来**存储字符串**的，根节点表示**空字符串**。
+
+前缀树的每一个节点代表一个**字符串（前缀）**。每一个节点会有多个子节点，通往不同子节点的路径上有着不同的字符。子节点代表的字符串是由节点本身的**原始字符串**，以及**通往该子节点路径上所有的字符**组成的。
+
+前缀树的一个重要的特性是，**节点所有的后代都与该节点相关的字符串有着共同的前缀**。这就是前缀树名称的由来。前缀树有着广泛的应用，例如自动补全，拼写检查等等。
+
+
+
 #### B + 树
-
-
-
-#### Trie 树
 
 
 
