前缀树题目

--- a/docs/数据结构.md
+++ b/docs/数据结构.md
@@ -2266,7 +2266,224 @@ return false;   // change return value to fit specific problem
   }
   ```
 
-- 
+- [单词替换](https://leetcode-cn.com/problems/replace-words/)：现在，给定一个由许多词根组成的词典和一个句子。你需要将句子中的所有`继承词`用`词根`替换掉。如果`继承词`有许多可以形成它的`词根`，则用最短的词根替换它。
+
+  ```java
+  /**
+   * 构建前缀树
+   */
+  private class Trie {
+      private class TrieNode {
+          // 当前节点是否代表一个单词
+          boolean isWord;
+          // 子节点集合
+          TrieNode[] trieNodes = new TrieNode[26];
+          // 判断当前节点是否存在目标子节点
+          boolean exist(char c) {
+              return trieNodes[c - 'a'] != null;
+          }
+      }
+      // 前缀树的根节点
+      private TrieNode root = new TrieNode();
+      
+   private void insert(String word) {
+          TrieNode cur = root;
+          for (int i = 0; i < word.length(); i++) {
+              char c = word.charAt(i);
+              if (!cur.exist(c)) {
+                  cur.trieNodes[c - 'a'] = new TrieNode();
+              }
+              cur = cur.trieNodes[c - 'a'];
+          }
+          // 将节点标记为单词
+          cur.isWord = (cur != root);
+      }
+  
+   private String getPrefix(String word) {
+          TrieNode cur = root;
+          for (int i = 0; i < word.length(); i++) {
+              char c = word.charAt(i);
+              if (cur.exist(c)) {
+                  // 存在此单词的词根
+                  if (cur.trieNodes[c - 'a'].isWord) {
+                      return word.substring(0, i + 1);
+                  }
+              } else {
+                  // 不存在此单词的词根
+                  return word;
+              }
+              cur = cur.trieNodes[c - 'a'];
+          }
+          return word;
+      }
+  }
+  
+  private Trie trie = new Trie();
+  
+  /**
+   * 解法一：构建前缀树 然后根据前缀树替换单词
+   */
+  public String replaceWords(List<String> dict, String sentence) {
+      // 将词根放进前缀树中
+      for (String word : dict) {
+          trie.insert(word);
+      }
+      // 在前缀树查找是否有此单词的词根
+      StringBuilder builder = new StringBuilder();
+      String[] words = sentence.split(" ");
+      for (String s : words) {
+          builder.append(trie.getPrefix(s)).append(" ");
+      }
+      // 去掉最后的空格
+      if (builder.length() > 0) {
+          builder.deleteCharAt(builder.length() - 1);
+      }
+      return builder.toString();
+  }
+  ```
+
+- [数组中两个数的最大异或值](https://leetcode-cn.com/problems/maximum-xor-of-two-numbers-in-an-array/)：给定一个非空数组，数组中元素为 a~0~, a~1~, a~2~, … , a~n-1~，其中 0 ≤ a~i~ < 2^31^ 。找到 a~i~ 和a~j~ 最大的异或 (XOR) 运算结果，其中 0 ≤ i,  j < n 。
+
+  ```java
+  private class TrieNode {
+      // 当前节点代表的数
+      public int val;
+      // 当前比特位为 0, 延长左子节点
+      public TrieNode left;
+      // 当前比特位为 1, 延长右子节点
+      public TrieNode right;
+  }
+  
+  private TrieNode root = new TrieNode();
+  
+  private void insert(int num) {
+      TrieNode cur = root;
+      // 对目标数的从高位到低位拆分 存到前缀树中
+      for (int i = 30; i >= 0; --i) {
+          int bit = (num >> i) & 1;
+          if (bit == 1) {
+              if (cur.right == null) {
+                  cur.right = new TrieNode();
+              }
+              cur = cur.right;
+          } else {
+              if (cur.left == null) {
+                  cur.left = new TrieNode();
+              }
+              cur = cur.left;
+          }
+      }
+      cur.val = num;
+  }
+  
+  /**
+   * 解法一：前缀树
+   * 异或结果要最大，那么尽可能的保证高位是 1
+   * 先将所有的元素按二进制插入到前缀树中
+   * 再次遍历数组，在前缀树中找能使 异或 结果更大的路径
+   */
+  public int findMaximumXOR(int[] nums) {
+      // 构建前缀树
+      for (int num : nums) {
+          insert(num);
+      }
+      // 在前缀树中找能使 异或 结果更大的路径
+      int res = 0;
+      for (int num : nums) {
+          TrieNode cur = root;
+          for (int i = 30; i >= 0; --i) {
+              int bit = (num >> i) & 1;
+              if (bit == 1) {
+                  if (cur.left != null) {
+                      cur = cur.left;
+                  } else {
+                      cur = cur.right;
+                  }
+              } else {
+                  if (cur.right != null) {
+                      cur = cur.right;
+                  } else {
+                      cur = cur.left;
+                  }
+              }
+          }
+          res = Math.max(res, num ^ cur.val);
+      }
+      return res;
+  }
+  ```
+
+- [单词搜索](https://leetcode-cn.com/problems/word-search-ii/)：给定一个二维网格 **board** 和一个字典中的单词列表 **words**，找出所有同时在二维网格和字典中出现的单词。单词必须按照字母顺序，通过相邻的单元格内的字母构成，其中“相邻”单元格是那些水平相邻或垂直相邻的单元格。同一个单元格内的字母在一个单词中不允许被重复使用。
+
+  ```java
+  private class TrieNode {
+      boolean isWord = false;
+      String val;
+      TrieNode[] nodes = new TrieNode[26];
+  }
+  
+  private TrieNode root = new TrieNode();
+  
+  /**
+   * 将字符串存进前缀树中
+   */
+  private void insert(String word) {
+      TrieNode cur = root;
+      for (int i = 0; i < word.length(); i++) {
+          char c = word.charAt(i);
+          if (cur.nodes[c - 'a'] == null) {
+              cur.nodes[c - 'a'] = new TrieNode();
+          }
+          cur = cur.nodes[c - 'a'];
+      }
+      cur.isWord = true;
+      cur.val = word;
+  }
+  
+  /**
+   * 解法一：先对单词列表构建前缀树, 然后递归搜索二维数组的字符是否匹配
+   */
+  public List<String> findWords(char[][] board, String[] words) {
+      // 将字符串插入前缀树
+      for (String word : words) {
+          insert(word);
+      }
+      int row = board.length;
+      int col = board[0].length;
+      // 已访问过的坐标
+      boolean[][] visited = new boolean[row][col];
+      Set<String> res = new HashSet<>();
+      for (int i = 0; i < row; i++) {
+          for (int j = 0; j < col; j++) {
+              findWords(board, visited, i, j, res, root);
+          }
+      }
+      return new LinkedList<>(res);
+  }
+  
+  private void findWords(char[][] board, boolean[][] visited, int i, int j, Set<String> res, TrieNode cur) {
+      // 边界以及是否已经访问判断
+      if (i < 0 || i >= board.length || j < 0 || j >= board[0].length || visited[i][j]) {
+          return;
+      }
+      cur = cur.nodes[board[i][j] - 'a'];
+      // 没有子节点了，回退
+      if (cur == null) {
+          return;
+      }
+      //找到单词后不能回退，因为可能是“ad” “addd”这样的单词得继续查找
+      if (cur.isWord) {
+          res.add(cur.val);
+      }
+      visited[i][j] = true;
+      findWords(board, visited, i - 1, j, res, cur);
+      findWords(board, visited, i + 1, j, res, cur);
+      findWords(board, visited, i, j - 1, res, cur);
+      findWords(board, visited, i, j + 1, res, cur);
+      //最后要回退，因为下一个起点可能会用到上一个起点的字符
+      visited[i][j] = false;
+  }
+  ```
 
 
 
