--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -1304,7 +1304,7 @@ public class StaticInnerSingleton {
         private static final StaticInnerSingleton singleton = new StaticInnerSingleton();
     }
 
-    public StaticInnerSingleton getInstance() {
+    public static StaticInnerSingleton getInstance() {
         return InnerSingleton.singleton;
     }
 }
